Fixed sample pre-formatted section not wrapping correctly in IE7.

--- a/samples/sample.css
+++ b/samples/sample.css
@@ -190,6 +190,11 @@ pre.samples
 {
 	margin: 0;
 	padding: 0;
+}
+
+#outputSample pre,
+pre.samples
+{
 	white-space: pre; /* CSS2 */
 	white-space: -moz-pre-wrap; /* Mozilla*/
 	white-space: -o-pre-wrap; /* Opera 7 */
